# MPC_TrajectoryPlanning

./: .gitignore  CMakeLists.txt  README.md  main.cc
data/: vehiclestate.csv
